# wailing-spire

./: .gitignore  .gitmodules  Cargo.toml  build.rs  spire.rs
assets/ldtk/: 0.entities.ron  0.tiles.ron  80.entities.ron  80.tiles.ron  82.tiles.ron  LevelOne.scn.ron  spire.ldtk  spire.ron
assets/particles/: homing_hooking.ron  homing_start.ron  jump.ron
assets/shaders/: glitch.wgsl
assets/sprites/: wall_hook.aseprite  walls.aseprite
physics/: Cargo.toml
physics/src/: collision.rs  debug.rs  gravity.rs  layers.rs  lib.rs  trigger.rs
selector/: Cargo.toml
selector/src/: lib.rs
src/: animation.rs  entity_registry.rs  health.rs  levels.rs  lifetime.rs  main.rs  map.rs  player.rs  spikes.rs  spire.rs  test.rs  time.rs  tween.rs
src/enemies/: dino.rs  mod.rs  spiker.rs
src/entities/: mod.rs  wall_hook.rs
src/physics/: collision.rs  debug.rs  gravity.rs  layers.rs  mod.rs  spatial.rs  trigger.rs  velocity.rs
src/player/: camera.rs  combo.rs  health.rs  hook.rs  input.rs  mod.rs  movement.rs  params.rs  selector.rs
src/ui/: mod.rs
