[package]
name = "wailing-spire"
version = "0.1.0"
edition = "2021"

[dependencies]
leafwing-input-manager = "0.16.0"
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }
bevy_pixel_gfx = { path = "bevy_pixel_gfx" }
serde = "1.0.217"
rand = "0.8.5"
bevy_tween = "0.7.0"
smallvec = "1.13.2"

[dependencies.bevy]
version = "0.15"
features = ["dynamic_linking", "file_watcher", "wav"]

[build-dependencies]
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# [profile.dev.package."bevy_sequence"]
# opt-level = 0

# [profile.dev.package."bevy_pretty_text"]
# opt-level = 0

# [profile.dev.package."bevy_ldtk_scene"]
# opt-level = 0

[profile.dev.package."bevy_pixel_gfx"]
opt-level = 0
