[package]
name = "wailing-spire"
version = "0.1.0"
edition = "2021"

[dependencies]
leafwing-input-manager = "0.16.0"
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }
bevy_pixel_gfx = { path = "bevy_pixel_gfx" }
serde = "1.0.217"
rand = "0.8.5"
bevy_tween = "0.7.0"
smallvec = "1.13.2"
bevy_framepace = "0.18"
physics = { path = "physics" }
selector = { path = "selector" }
bevy-inspector-egui = "0.28.1"
bevy_enoki = "0.3.3"

[dependencies.bevy]
version = "0.15"
features = ["dynamic_linking", "file_watcher", "wav"]

[build-dependencies]
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }
proc-macro2 = "1.0.93"
quote = "1.0.38"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# [profile.dev.package."bevy_sequence"]
# opt-level = 0

# [profile.dev.package."bevy_pretty_text"]
# opt-level = 0

# [profile.dev.package."bevy_ldtk_scene"]
# opt-level = 0

[profile.dev.package."bevy_pixel_gfx"]
opt-level = 0
